--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".cadastro.Cadastro"></activity>
+        <activity android:name=".Lista"></activity>
+        <activity android:name=".cadastro.Cadastro" />
         <activity android:name=".FirstPage" />
         <activity android:name=".MainActivity">
             <intent-filter>
